--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "spacesvr-generative-playground",
+  "name": "colorforest",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
     "@emotion/styled": "11.3.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-scripts": "4.0.0",
     "react-spring": "9.1.2",
     "spacesvr": "1.8.2",
     "three": "0.127.0",
-    "axios": "0.21.4"
+    "axios": "0.21.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "typescript": "^4.1.2"
   },
   "devDependencies": {
     "@types/react": "17.0.0",
